@startuml

interface Animated {
	-active: boolean
	-frame: int
	-frameInterval: float
	__
	+tick(dt: float)
	+length(): int
}

interface Renderable {
	+render(g: GraphicsContext, position: Vector)
	+size(): Vector
}
Renderable -[hidden]u- Animated

class Camera {
	-position: Vector
	-unitPixels: Vector
	-output: Vector
	-halfSize: Vector
	__
	+getAbsolutePosition(relative: Vector): Vector
	+getRelativePosition(absolute: Vector): Vector
}
Camera o-- dev.kkorolyov.pancake.platform.math.Vector

class CompositeImage {
	-images: [Image]
	-size: Vector
	__
	+add(CompositeImage)
	+add(Image)
	..
	+remove(Image)
	+clear(): int
}
CompositeImage o-- javafx.scene.image.Image
CompositeImage o-- dev.kkorolyov.pancake.platform.math.Vector

class ImageRegistry {
	-images: {String, CompositeImage}
	__
	get(name: String): CompositeImage
	..
	put(path: String)
	put(name: String, image: CompositeImage)
}
ImageRegistry o-- CompositeImage

class SoundRegistry {
	-resourceDistributions: {String, WeightedDistribution}
	-cache: {String, AudioClip}
	-cacheSize: int
	__
	+get(name: String): AudioClip
	-getResource(name: String): String
	..
	+put(path: String)
	+put(name: String, resource: String)
	+put(name: String, resource: String, weight: int)
}
SoundRegistry o-- dev.kkorolyov.pancake.platform.math.WeightedDistribution
SoundRegistry o-- javafx.scene.media.AudioClip

@enduml
